# pokeplanner

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  flake.nix  justfile  plan.md
.github/issues/: 01-extract-shared-logic.md  02-error-handling-observability.md  03-cli-module-split.md  04-generic-grpc-handler.md  05-job-guard-pattern.md
.github/workflows/: ci.yml  publish.yml
crates/pokeplanner-api-grpc/: Cargo.toml  build.rs
crates/pokeplanner-api-grpc/src/: main.rs
crates/pokeplanner-api-rest/: Cargo.toml
crates/pokeplanner-api-rest/src/: lib.rs  main.rs  tests.rs
crates/pokeplanner-api-rest/tests/: rest_api_integration.rs
crates/pokeplanner-cli/: Cargo.toml
crates/pokeplanner-cli/src/: display.rs  main.rs  unusable.rs
crates/pokeplanner-cli/src/commands/: cache.rs  games.rs  mod.rs  moves.rs  pokemon.rs  team.rs  unusable_cmd.rs
crates/pokeplanner-core/: Cargo.toml
crates/pokeplanner-core/src/: error.rs  job.rs  lib.rs  model.rs  team.rs  tests.rs
crates/pokeplanner-pokeapi/: Cargo.toml
crates/pokeplanner-pokeapi/src/: cache.rs  client.rs  lib.rs  traits.rs  types.rs
crates/pokeplanner-pokeapi/tests/: http_client_integration.rs
crates/pokeplanner-pokeapi/tests/fixtures/: pokedex-kanto.json  pokemon-bulbasaur.json  pokemon-charizard-mega-x.json  pokemon-charizard.json  pokemon-charmander.json  pokemon-squirtle.json  species-bulbasaur.json  species-charizard.json  species-charmander.json  species-squirtle.json  type-bug.json  type-dark.json  type-dragon.json  type-electric.json  type-fairy.json  type-fighting.json  type-fire.json  type-flying.json  type-ghost.json  type-grass.json  type-ground.json  type-ice.json  type-normal.json  type-poison.json  type-psychic.json  type-rock.json  type-steel.json  type-water.json  version-group-list.json  version-group-red-blue.json
crates/pokeplanner-service/: Cargo.toml
crates/pokeplanner-service/src/: lib.rs  move_selector.rs  team_planner.rs  tests.rs  type_chart.rs
crates/pokeplanner-storage/: Cargo.toml
crates/pokeplanner-storage/src/: json_store.rs  lib.rs  tests.rs  traits.rs
crates/pokeplanner-telemetry/: Cargo.toml
crates/pokeplanner-telemetry/src/: lib.rs  metrics.rs
dashboards/: README.md  jobs.json  overview.json  pokeapi.json
docs/: ARCHITECTURE.md  CACHING.md  COST_FUNCTION.md  DEPENDENCIES.md  FAQ.md  IMPLEMENTATION_CHECKLIST.md  MULTI_SESSION_LLM_RESEARCH.md  OBSERVABILITY.md  STRUCTURE.md
ops/: RUNBOOK.md
proto/: pokeplanner.proto
