[workspace]
resolver = "2"
members = [
    "crates/pokeplanner-core",
    "crates/pokeplanner-storage",
    "crates/pokeplanner-service",
    "crates/pokeplanner-api-rest",
    "crates/pokeplanner-api-grpc",
    "crates/pokeplanner-cli",
    "crates/pokeplanner-pokeapi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
pokeplanner-core = { path = "crates/pokeplanner-core" }
pokeplanner-storage = { path = "crates/pokeplanner-storage" }
pokeplanner-service = { path = "crates/pokeplanner-service" }
pokeplanner-pokeapi = { path = "crates/pokeplanner-pokeapi" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# REST API
axum = "0.8"

# gRPC
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP middleware
tower = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Rate limiting
governor = "0.8"

# Home directory resolution
dirs = "6"

# Terminal colors
colored = "3"

# Testing
wiremock = "0.6"
http-body-util = "0.1"
