[workspace]
resolver = "2"
members = [
    "crates/pokeplanner-core",
    "crates/pokeplanner-storage",
    "crates/pokeplanner-service",
    "crates/pokeplanner-api-rest",
    "crates/pokeplanner-api-grpc",
    "crates/pokeplanner-cli",
    "crates/pokeplanner-pokeapi",
    "crates/pokeplanner-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
pokeplanner-core = { path = "crates/pokeplanner-core" }
pokeplanner-storage = { path = "crates/pokeplanner-storage" }
pokeplanner-service = { path = "crates/pokeplanner-service" }
pokeplanner-pokeapi = { path = "crates/pokeplanner-pokeapi" }
pokeplanner-telemetry = { path = "crates/pokeplanner-telemetry" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# REST API
axum = "0.8"

# gRPC
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

# HTTP middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Rate limiting
governor = "0.10"

# Home directory resolution
dirs = "6"

# Terminal colors
colored = "3"

# Testing
wiremock = "0.6"
http-body-util = "0.1"
