[package]
name = "pokeplanner-api-rest"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pokeplanner-rest"
path = "src/main.rs"

[dependencies]
pokeplanner-core = { workspace = true }
pokeplanner-storage = { workspace = true }
pokeplanner-service = { workspace = true }
pokeplanner-pokeapi = { workspace = true }
pokeplanner-telemetry = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
