[package]
name = "pokeplanner-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pokeplanner"
path = "src/main.rs"

[dependencies]
pokeplanner-core = { workspace = true }
pokeplanner-storage = { workspace = true }
pokeplanner-service = { workspace = true }
pokeplanner-pokeapi = { workspace = true }
pokeplanner-telemetry = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = "3"
