[package]
name = "pokeplanner-pokeapi"
version.workspace = true
edition.workspace = true

[dependencies]
pokeplanner-core = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
