[package]
name = "pokeplanner-service"
version.workspace = true
edition.workspace = true

[dependencies]
pokeplanner-core = { workspace = true }
pokeplanner-storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
