[package]
name = "pokeplanner-storage"
version.workspace = true
edition.workspace = true

[dependencies]
pokeplanner-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
